# Closy

./: .env.example  .gitignore  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
.cursor/rules/: project.md
assets/avatar/: README.md
assets/avatar/fallback/: procedural-fallback.meta.json
assets/avatar/realistic/: default-avatar.meta.json
assets/avatar/stylised/: default-mannequin.meta.json
assets/models/avatar/: README.md
docs/: avatar-pipeline-rnd.md  avatar-runtime-pipeline.md  zeroone-avatar-asset-foundry.md  zeroone-avatar-bridge.md
engine/: CMakeLists.txt  README.md
engine/example_outfits/: demo_outfit.json  outfit_navy_charcoal.json  outfit_walk_casual.json
engine/examples/: avatar_export.cpp  avatar_viewport.cpp  clipping_hotspot_export.cpp  clipping_hotspot_export.hpp  outfit_json_parse.cpp
engine/include/Closy/: Avatar.hpp  AvatarPose.hpp  AvatarPreviewExport.hpp  Bone.hpp  ClothingTag.hpp  GlRenderer.hpp  Mesh.hpp  OffscreenCapture.hpp  Renderer.hpp  Scene.hpp  Transform.hpp  avatar_demo_outfit.hpp  gl_procs.hpp  outfit_builder.hpp  outfit_description.hpp  outfit_json_io.hpp  write_png.hpp
engine/src/: Avatar.cpp  AvatarPose.cpp  GlRenderer.cpp  Mesh.cpp  OffscreenCapture.cpp  Scene.cpp  avatar_demo_outfit.cpp  gl_procs.cpp  gl_procs.hpp  outfit_builder.cpp  write_png.cpp
engine/tests/: avatar_smoke.cpp
scripts/: avatar-audit.mjs  closy-avatar-export.mjs  closy-avatar-request.mjs
src/app/: _layout.tsx  _layout.web.tsx  activity.tsx  add-item.tsx  avatar.tsx  create-outfit.tsx  dev-avatar-preview.tsx  sign-in.tsx  sign-up.tsx  suggest-outfit.tsx  wardrobe-insights.tsx
src/app/(tabs)/: _layout.tsx  discover.tsx  index.tsx  outfits.tsx  profile.tsx
src/app/author/: [userId].tsx
src/app/edit-item/: [id].tsx
src/app/edit-outfit/: [id].tsx
src/app/item/: [id].tsx
src/app/outfit/: [id].tsx
src/app/published-outfit/: [id].tsx
src/components/ui/: app-button.tsx  app-input.tsx  empty-state.tsx  placeholder-screen.tsx  remote-sync-notice.tsx  screen-container.tsx
src/components/web/: web-html-button.tsx  web-html-button.types.ts  web-html-button.web.tsx
src/features/activity/: index.ts
src/features/auth/: auth-context.tsx  auth-gate.tsx  index.ts
src/features/avatar-export/: avatar-fit-debug.ts  avatar-render-http.ts  body-shape-state.ts  build-export-request.ts  cache-availability.ts  colour-heuristic.ts  contract.ts  dev-avatar-shared.ts  fit-adjust.ts  fit-suggestions.ts  garment-fit-state.ts  index.ts  paths.ts  repo-root.ts  run-avatar-export.ts  save-export-request.ts  types.ts
src/features/avatar-viewport/: avatar-anchors.ts  avatar-assets.ts  avatar-experience-screen.tsx  avatar-normalize.ts  avatar-pose-angles.ts  avatar-procedural-scene.tsx  avatar-rig-inspector.ts  avatar-scene-store.ts  avatar-scene-types.ts  avatar-source-manager.ts  avatar-startup-state.ts  avatar-viewport-live.tsx  avatar-viewport-nav-settings.ts  avatar-viewport-scene-debug.tsx  avatarSourceResolver.ts  bundled-body-asset.ts  garment-deformation.ts  garment-fit-region-reset.ts  garment-rig-pose.ts  (+18 more)
src/lib/: app-persist-gate.tsx  constants.ts  format-relative-day.ts  index.ts
src/navigation/: AppNavigationShell.tsx
src/theme/: index.ts
src/types/: expo-public-env.d.ts  index.ts
supabase/: config.toml
supabase/migrations/: 20260329120000_wardrobe_items.sql  20260329120001_outfits.sql  20260329120002_wardrobe_images_storage.sql  20260329130000_published_outfits.sql  20260329140000_published_outfits_author_delete.sql  20260329150000_published_outfit_likes.sql  20260329160000_profiles.sql  20260329170000_wardrobe_image_refs.sql  20260329180000_user_follows.sql  20260329190000_published_outfit_comments.sql  20260329190500_following_feed_rpc.sql  20260329200000_user_activity.sql  20260329220000_user_activity_read_at.sql  20260329230000_for_you_feed_rpc.sql  20260329240000_outfit_suggestion_feedback.sql
(+139 files in other folders)
